UP-4622 UP-4671 Fix offcanvas flyout on IOS + the new mobile nav do not have the right background color + add new LESS variables + GPU accelerated CSS + new pure CSS Hamburger nav toggle

--- a/uportal-war/src/main/webapp/media/skins/respondr/common/less/regions.less
+++ b/uportal-war/src/main/webapp/media/skins/respondr/common/less/regions.less
@@ -62,8 +62,12 @@
        Namespace: .region-pre-header
        ========================================================================== */
     #up-sticky-nav {
+        -webkit-transition: all .25s ease-out;
+        -o-transition: all .25s ease-out;
+        transition: all .25s ease-out;
         position: fixed;
-        top: 0px;
+        top: 0;
+        left: 0;
         z-index: 1000;
         width: 100%;
 
@@ -76,6 +80,142 @@
             }
         }
     }
+
+    /* =================================================================================================================
+       Namespace: .region-pre-header #up-sticky-nav : Animated Hamburger Toggle button for mobile offcanvas navigation
+       ================================================================================================================= */
+
+    .hamburger {
+        background-color: transparent;
+        border: 0;
+        color: inherit;
+        cursor: pointer;
+        display: inline-block;
+        font: inherit;
+        margin: 0;
+        overflow: visible;
+        padding-top: 5px;
+        text-transform: none;
+        transition-duration: 0.15s;
+        transition-property: opacity, -webkit-filter;
+        transition-property: opacity, filter;
+        transition-property: opacity, filter, -webkit-filter;
+        transition-timing-function: linear;
+
+        &:hover {
+            opacity: 0.7;
+        }
+    }
+
+    .hamburger-box {
+        display: inline-block;
+        height: 15px;
+        position: relative;
+        width: 15px;
+    }
+
+    .hamburger-inner {
+        background-color: @menu-toggle-text-color; // Middle line of the hamburger
+        border-radius: 4px;
+        display: block;
+        height: 2px;
+        margin-top: -2px;
+        position: absolute;
+        top: 50%;
+        transition-duration: 0.15s;
+        transition-property: -webkit-transform;
+        transition-property: transform;
+        transition-property: transform, -webkit-transform;
+        transition-timing-function: ease;
+        -webkit-transition-delay: 350ms; /* Safari */
+        transition-delay: 350ms;
+        width: 15px;
+
+        &::before {
+            background-color: @menu-toggle-text-color; // Top line of the hamburger
+            border-radius: 4px;
+            content: "";
+            display: block;
+            height: 2px;
+            position: absolute;
+            top: -5px;
+            transition-duration: 0.15s;
+            transition-property: -webkit-transform;
+            transition-property: transform;
+            transition-property: transform, -webkit-transform;
+            transition-timing-function: ease;
+            -webkit-transition-delay: 350ms; /* Safari */
+            transition-delay: 350ms;
+            width: 15px;
+        }
+
+        &::after {
+            background-color: @menu-toggle-text-color; // Bottom line of the hamburger
+            border-radius: 4px;
+            bottom: -5px;
+            content: "";
+            display: block;
+            height: 2px;
+            position: absolute;
+            transition-duration: 0.15s;
+            transition-property: -webkit-transform;
+            transition-property: transform;
+            transition-property: transform, -webkit-transform;
+            transition-timing-function: ease;
+            -webkit-transition-delay: 350ms; /* Safari */
+            transition-delay: 350ms;
+            width: 15px;
+        }
+    }
+
+    .hamburger-arrow {
+
+        .hamburger-inner {
+
+            &::before {
+                transition: top 0.1s 0.15s ease, -webkit-transform 0.15s cubic-bezier(0.165, 0.84, 0.44, 1);
+                transition: top 0.1s 0.15s ease, transform 0.15s cubic-bezier(0.165, 0.84, 0.44, 1);
+                transition: top 0.1s 0.15s ease, transform 0.15s cubic-bezier(0.165, 0.84, 0.44, 1), -webkit-transform 0.15s cubic-bezier(0.165, 0.84, 0.44, 1);
+            }
+
+            &::after {
+                transition: bottom 0.1s 0.15s ease, -webkit-transform 0.15s cubic-bezier(0.165, 0.84, 0.44, 1);
+                transition: bottom 0.1s 0.15s ease, transform 0.15s cubic-bezier(0.165, 0.84, 0.44, 1);
+                transition: bottom 0.1s 0.15s ease, transform 0.15s cubic-bezier(0.165, 0.84, 0.44, 1), -webkit-transform 0.15s cubic-bezier(0.165, 0.84, 0.44, 1);
+            }
+        }
+    }
+
+    .hamburger-arrow.is-active {
+    /* Transform the hamburger to an Arrow left */
+        .hamburger-inner {
+
+            &::before {
+                -webkit-transform: translate3d(-3px, -4px, 0) rotate(-45deg) scale(0.7, 1);
+                top: 0;
+                transform: translate3d(-3px, -4px, 0) rotate(-45deg) scale(0.7, 1);
+                transition: top 0.35s ease, -webkit-transform 0.15s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+                transition: top 0.35s ease, transform 0.15s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+                transition: top 0.35s ease, transform 0.15s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22), -webkit-transform 0.15s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+            }
+
+            &::after {
+                -webkit-transform: translate3d(-3px, 4px, 0) rotate(45deg) scale(0.7, 1);
+                bottom: 0;
+                transform: translate3d(-3px, 4px, 0) rotate(45deg) scale(0.7, 1);
+                transition: bottom 0.35s ease, -webkit-transform 0.15s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+                transition: bottom 0.35s ease, transform 0.15s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+                transition: bottom 0.35s ease, transform 0.15s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22), -webkit-transform 0.15s 0.1s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+            }
+        }
+    }
+
+    .active {
+        #up-sticky-nav {
+            border-left: thin solid @grayscale7; // little 3D effect when the offcanvas is open
+        }
+    }
+
 
     /* ==========================================================================
        Namespace: .region-header-bottom
@@ -150,7 +290,7 @@
 
         /* Undo sticky header styles */
         #up-sticky-nav {
-            position: static;
+            position: relative;
             z-index: auto;
         }
 
